[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum"
version = "1.0.0"
description = "Momentum is a task management application that comes with a cli tool plus a console, desktop, mobile, and web application partners. All that share the same core logic. 🙂"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "mekasu0124", email = "mek0124@proton.me"},
]
license = "MIT"
dependencies = [
  "click==8.4.1",
  "sqlalchemy==2.0.50"
]

[project.urls]
Homepage = "https://github.com/mek0124/momentum"
Repository = "https://github.com/mek0124/momentum.git"
Documentation = "https://github.com/mek0124/momentum"

[project.scripts]
momentum = "apps.cli.cli:cli"

[tool.setuptools]
packages = ["apps", "core"]

[tool.setuptools.package-data]
"*" = ["*.py", "assets/*"]