[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum"
version = "1.0.0"
description = "A GUI for journaling"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "mekasu0124", email = "mek0124@proton.me"},
]
license = "MIT"
dependencies = [
    "pydantic>=2.13.4",
    "pyside6>=6.11.1",
]

[project.urls]
Homepage = "https://github.com/mek0124/momentum"
Repository = "https://github.com/mek0124/momentum.git"
Documentation = "https://github.com/mek0124/momentum"

[project.scripts]
momentum = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.py", "assets/*"]
