[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum"
version = "1.0.0"
description = "A GUI for journaling"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "mekasu0124", email = "mek0124@proton.me"},
]
license = "MIT"
dependencies = [
    "build>=1.5.0",
    "pydantic>=2.13.4",
    "pyside6>=6.11.1",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]

[project.urls]
Homepage = "https://github.com/mek0124/momentum"
Repository = "https://github.com/mek0124/momentum.git"
Documentation = "https://github.com/mek0124/momentum"

[project.scripts]
momentum = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.py", "assets/*"]
